--- a/src/main/resources/templates/goodsDetail.html
+++ b/src/main/resources/templates/goodsDetail.html
@@ -50,7 +50,7 @@
                                                           th:text="${remainSeconds}"></span>秒</span>
             </td>
             <td>
-                <form id="seckillForm" method="post" action="/seckill/do_seckill">
+                <form id="seckillForm" method="post" action="/seckill/doSeckill">
                     <button class="btn btn-primary btn-block" type="submit" id="buyButton">立即秒杀</button>
                     <input type="hidden" name="goodsId" th:value="${goods.id}"/>
                 </form>
@@ -80,20 +80,20 @@
         var remainSeconds = $("#remainSeconds").val();
         var timeout;
         if (remainSeconds > 0) {//秒杀还没开始，倒计时
-//            $("#buyButton").attr("disabled", true);
+            //$("#buyButton").attr("disabled", true);
             timeout = setTimeout(function () {
                 $("#countDown").text(remainSeconds - 1);
                 $("#remainSeconds").val(remainSeconds - 1);
                 countDown();
             }, 1000);
         } else if (remainSeconds === 0) {//秒杀进行中
-            $("#buyButton").attr("disabled", false);
+            //$("#buyButton").attr("disabled", false);
             if (timeout) {
                 clearTimeout(timeout);
             }
             $("#seckillTip").html("秒杀进行中");
         } else {//秒杀已经结束
-//            $("#buyButton").attr("disabled", true);
+            //$("#buyButton").attr("disabled", true);
             $("#seckillTip").html("秒杀已经结束");
         }
     }
